--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ This is where information to be presented to the user is entered.
 <body>
 
 <h1 style="background-color:Tomato;">XuZhe10</h1>
-<h1 style="background-color:Orange;">XuZhe</h1>
+<h1 style="background-color:Orange;">Felix</h1>
 <h1 style="background-color:DodgerBlue;">Hello</h1>
 <h1 style="background-color:MediumSeaGreen;">Dont look at this</h1>
 <h1 style="background-color:Gray;">Its illegal</h1>
-<h1 style="background-color:SlateBlue;">kcan</h1>
-<h1 style="background-color:Violet;">warned you</h1>
-<h1 style="background-color:LightGray;">Hello</h1>
+<h1 style="background-color:SlateBlue;">Joergen</h1>
+<h1 style="background-color:Violet;">Joergen II</h1>
+<h1 style="background-color:LightGray;">Sven</h1>
 
 </body>
 </html>
