--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 <title>
-The title of the webpage
+Hello
 </title>
 </head>
 <body>
-<h1>This is my Heading</h1>
+<h1>Talk to my chatbot</h1>
 This is where information to be presented to the user is entered.
 </body>
 </html>
@@ -13,14 +13,34 @@ This is where information to be presented to the user is entered.
 <html>
 <body>
 
-<h1 style="background-color:Tomato;">XuZhe10</h1>
-<h1 style="background-color:Orange;">Felix</h1>
-<h1 style="background-color:DodgerBlue;">Hello</h1>
-<h1 style="background-color:MediumSeaGreen;">Dont look at this</h1>
-<h1 style="background-color:Gray;">Its illegal</h1>
-<h1 style="background-color:SlateBlue;">Joergen</h1>
-<h1 style="background-color:Violet;">Joergen II</h1>
-<h1 style="background-color:LightGray;">Sven</h1>
+<script type='text/javascript' id='susi-bot-script' data-userid='991735d2b819761c65124368ccf12930' data-group='Food and Drink' data-language='en' data-skill='Felix' src='https://susi.ai/susi-chatbot.js'></script>
+::name Felix
+::category Food and Drink
+::language en
+::author <author_name>
+::author_url <author_url>
+::description <description> 
+::dynamic_content <Yes/No>
+::developer_privacy_policy <link>
+::image images/<image_name>
+::terms_of_use <link>
 
+
+# replace the following lines - click on the (i) to get a tutorial:
+
+What is your name?
+My name is Felix!:)
+
+What is your favourite food?
+I like Swedish meatballs
+
+What is your favourite drink?
+  I love water
+
+What restaurant do you recommend?
+I recommend the Japanese store
+
+What food is cheap?
+The snacks store sells a lot of affordable snacks
 </body>
 </html>
