--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@ Hello
 <h1>Talk to my chatbot</h1>
 <body>
 <html>
-
+<end>
+  
 <script type='text/javascript' id='susi-bot-script' data-userid='991735d2b819761c65124368ccf12930' data-group='Food and Drink' data-language='en' data-skill='Felix' src='https://susi.ai/susi-chatbot.js'></script>
 
-::name Felix
-::category Food and Drink
-::language en
-::author <author_name>
-::author_url <author_url>
-::description <description> 
-::dynamic_content <Yes/No>
-::developer_privacy_policy <link>
-::image images/<image_name>
-::terms_of_use <link>
+  ::name Felix
+  ::category Food and Drink
+  ::language en
+  ::author <author_name>
+  ::author_url <author_url>
+  ::description <description> 
+  ::dynamic_content <Yes/No>
+  ::developer_privacy_policy <link>
+  ::image images/<image_name>
+  ::terms_of_use <link>
 
 
 
